--- a/index.html
+++ b/index.html
@@ -21,82 +21,189 @@
 
 <body>
 <header class="glass nav">
-  <div class="logo-wrap">
+  <a class="logo-wrap" href="index.html">
     <img src="logo.png" alt="Sitari Astrology App Logo" class="logo-img">
     <span class="logo-text">Sitari</span>
-  </div>
+  </a>
   <div class="nav-actions">
-    <a class="btn glass-btn" href="#">iOS</a>
-    <a class="btn glass-btn" href="#">Android</a>
+    <a class="btn primary-btn glass-btn" href="#">
+        <img class="glass-btn-img" src="app-store.png"/>
+        <div class="btn-inner">
+            <div class="glass-btn-btn-inner-text">Download on </div>
+            <div class="glass-btn-inner-store">App Store</div>
+        </div>
+    </a>
+    <a class="btn glass-btn primary-btn" href="#">
+        <img class="glass-btn-img" src="play-store.png"/>
+        <div class="btn-inner">
+            <div class="glass-btn-btn-inner-text">Download on </div>
+            <div class="glass-btn-inner-store">Google Play</div>
+        </div>
+    </a>
   </div>
 </header>
 
 <main>
   <!-- HERO -->
-  <section class="hero">
-    <div class="hero-glass glass">
-      <h1>Free Astrology App to Talk to an AI Astrologer</h1>
-      <p>
-        Sitari lets you ask anything about love, career, marriage, health, and future.
-        No per minute fees. No per chat charges. Just astrology — free and instant.
-      </p>
+  
+    <section class="hero">
+        <div class="hero-glass">
+            <h1>Sitari - AI Astrology</h1>
 
-      <div class="download-buttons">
-        <a class="btn primary-btn" href="#">Download for iOS</a>
-        <a class="btn secondary-btn" href="#">Download for Android</a>
-      </div>
-    </div>
-  </section>
+            <h4>100% Free - No Per Minute, No Per Chat Charges.</h4>
 
-  <!-- TRUST / USP -->
-  <section class="features">
-    <article class="glass feature-card">
-      <h2>100% Free Astrology Chat</h2>
-      <p>No subscriptions, no hidden charges, no per minute billing.</p>
-    </article>
+            <p>
+            Every answer is computed using your complete astrological data:
+            planets, houses, significators, aspects and Dashas —
+            analysed instantly by AI.
+            </p>
 
-    <article class="glass feature-card">
-      <h2>AI Astrologer Available 24×7</h2>
-      <p>Ask questions anytime — powered by intelligent astrology logic.</p>
-    </article>
+            <p>Built on KP, Parashara, Nakshatras, Dashas & Divisional Charts. Mathematically precise chart and timing analysis. Complex astrology computed instantly and accurately by AI.</p>
 
-    <article class="glass feature-card">
-      <h2>Personalized Predictions</h2>
-      <p>Insights based on your birth details, planets, and timing.</p>
-    </article>
-  </section>
+            <div class="download-buttons">
+                <a class="btn primary-btn" href="#">
+                    <img class="primary-btn-img" src="app-store.png"/>
+                    <div class="btn-inner">
+                        <div>Download on </div>
+                        <div class="btn-inner-store">App Store</div>
+                    </div>
+                </a>
+                <a class="btn primary-btn" href="#">
+                    <img class="primary-btn-img" src="play-store.png"/>
+                    <div class="btn-inner">
+                        <div>Download on </div>
+                        <div class="btn-inner-store">Google Play</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
 
-  <!-- SEO HEAVY CONTENT -->
-  <section class="seo-content glass">
-    <h2>Why Sitari is the Best Astrology App</h2>
-    <p>
-      Sitari is designed for people looking for a free astrology app that actually helps.
-      Whether you want kundli insights, future predictions, marriage timing, career advice,
-      or relationship clarity — Sitari gives instant answers through an AI astrologer.
-    </p>
+    <section class="features">
+        <article class="glass feature-card">
+            <h2>100% Free</h2>
+            <p>No per minute, No per chat charges. Ask unlimited questions without worrying about cost.</p>
+        </article>
 
-    <p>
-      Unlike traditional astrology apps that charge per minute or per chat,
-      Sitari removes all barriers. You ask. Sitari answers. No pressure. No payments.
-    </p>
-  </section>
+        <article class="glass feature-card">
+            <h2>100% Secure</h2>
+            <p>Your charts and conversations are private and securely handled.</p>
+        </article>
 
-  <!-- FINAL CTA -->
-  <section class="cta">
-    <div class="glass cta-box">
-      <h2>Start Talking to Your AI Astrologer</h2>
-      <p>Download Sitari and explore astrology without limits.</p>
-      <div class="download-buttons">
-        <a class="btn primary-btn" href="#">iOS App</a>
-        <a class="btn secondary-btn" href="#">Android App</a>
-      </div>
-    </div>
-  </section>
+        <article class="glass feature-card">
+            <h2>Available 24×7</h2>
+            <p>Your AI astrologer is always available, anytime, anywhere, even without internet!</p>
+        </article>
+        <article class="glass feature-card">
+            <h2>Trained on </h2>
+            <p>AI Astro</p>
+        </article>
+    </section>
+
+    <section class="seo-content">
+        <h2>The Most Accurate Free Astrology App</h2>
+
+        <p>
+            Sitari is designed for people looking for a genuinely accurate astrology app,
+            without the pressure of per minute or per chat pricing.
+            Unlike generic horoscope apps, Sitari computes deep astrological logic
+            for you.
+        </p>
+
+        <p>
+            The AI astrologer analyses all your charts including
+            planetary placements, house significators, aspects,
+            and Vimshottari Dasha timelines to provide meaningful guidance.
+        </p>
+
+        <p>
+            Whether you are seeking guidance on marriage, career, relationships,
+            health, or life decisions, Sitari delivers precise, personalised astrology
+            instantly, and for free.
+        </p>
+    </section>
+
+    <section class="features">
+        <article class="glass feature-card">
+            <h2>AI Astrology</h2>
+            <p>
+            Ask detailed questions and receive chart-based astrological answers.
+            </p>
+        </article>
+
+        <article class="glass feature-card">
+            <h2>Daily Personalised Horoscope</h2>
+            <p>
+            Daily guidance tailored to your planetary movements and Dashas.
+            </p>
+        </article>
+
+        <article class="glass feature-card">
+            <h2>AI Numerology</h2>
+            <p>
+            Numerological insights based on your name and birth date.
+            <em>(Coming soon)</em>
+            </p>
+        </article>
+
+        <article class="glass feature-card">
+            <h2>Tarot</h2>
+            <p>
+            Intuitive tarot readings combined with AI interpretation.
+            <em>(Coming soon)</em>
+            </p>
+        </article>
+    </section>
+
+    <section class="seo-content glass">
+        <h2>How Sitari Astrology Works</h2>
+
+        <p>
+            Accurate astrological answers require deep mathematical analysis
+            of Vedic charts and Dashas - something Sitari’s AI is trained to compute
+            instantly for every single query.
+        </p>
+
+        <p>
+            Sitari blends advanced AI with authentic Vedic astrology systems
+            to generate precise, personalised insights:
+        </p>
+
+        <h4>KP Astrology for timing-based interpretations</h4>
+        <h4>Parashara principles for planetary strength and outcomes</h4>
+        <h4>Nakshatras and Padas for personality and behavioural mapping</h4>
+        <h4>Dashas and Bhuktis for life-event timelines</h4>
+        <h4>Divisional Charts (Vargas) for deeper layers of analysis</h4>
+
+        <p>
+            The AI instantly processes complex datasets such as
+            <code>Planets</code>,
+            <code>Houses</code>,
+            <code>Planet Significators</code>,
+            <code>Planetary Aspects</code>,
+            <code>House Significators</code>,
+            and
+            <code>Vimshottari Dasa</code>
+            to deliver accurate and meaningful guidance.
+        </p>
+
+        <p>
+            This fusion of traditional astrology and AI computation ensures
+            clarity, precision, and relevance.
+        </p>
+    </section>
 </main>
 
 <footer class="footer">
   <p>© 2026 Sitari • Free AI Astrology App</p>
+
+  <nav class="footer-links">
+    <a href="support.html">Support</a>
+    <a href="pp.pdf" target="_blank">Privacy Policy</a>
+    <a href="tnc.pdf" target="_blank">Terms & Conditions</a>
+  </nav>
 </footer>
+
 
 </body>
 </html>
