coming soong msg

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <span class="logo-text">Sitari</span>
   </a>
   <div class="nav-actions">
-    <a class="btn primary-btn glass-btn" href="#">
+    <a class="btn primary-btn glass-btn" href="#" onclick="alert('Coming Soon!'); return false;">
         <img class="glass-btn-img" src="app-store.png"/>
         <div class="btn-inner">
             <div class="glass-btn-btn-inner-text">Download on </div>
             <div class="glass-btn-inner-store">App Store</div>
         </div>
     </a>
-    <a class="btn glass-btn primary-btn" href="#">
+    <a class="btn glass-btn primary-btn" href="#" onclick="alert('Coming Soon!'); return false;">
         <img class="glass-btn-img" src="play-store.png"/>
         <div class="btn-inner">
             <div class="glass-btn-btn-inner-text">Download on </div>
@@ -61,14 +61,14 @@
             <p>Built on KP, Parashara, Nakshatras, Dashas & Divisional Charts. Mathematically precise chart and timing analysis. Complex astrology computed instantly and accurately by AI.</p>
 
             <div class="download-buttons">
-                <a class="btn primary-btn" href="#">
+                <a class="btn primary-btn" href="#" onclick="alert('Coming Soon!'); return false;">
                     <img class="primary-btn-img" src="app-store.png"/>
                     <div class="btn-inner">
                         <div>Download on </div>
                         <div class="btn-inner-store">App Store</div>
                     </div>
                 </a>
-                <a class="btn primary-btn" href="#">
+                <a class="btn primary-btn" href="#" onclick="alert('Coming Soon!'); return false;">
                     <img class="primary-btn-img" src="play-store.png"/>
                     <div class="btn-inner">
                         <div>Download on </div>
